# scripts

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  configreader.py  installer.sh  pyproject.toml  requirements_dev.txt  setup.sh  test.sh
.github/workflows/: pipeline.yaml
cheatsheet/: .env.example  cheatsheet.py  path.txt
open/: .env.example  open.py  paths.txt
organize/: organize.py
rust_utils/: fsm_tester.py
rust_utils/fuzzy_string_matcher/: Cargo.toml
rust_utils/fuzzy_string_matcher/src/: lib.rs
tests/: setup_hooks.sh  test.sh  test_sfm_module.py
utils/: configreader.py  functional_utils.py  logger.py  setup.py  sfm.py  string_fuzzy_matcher.py
utils/utils/: configreader.py  logger.py  string_fuzzy_matcher.py
