[project]
name = "scripts"
version = "0.1.0"
description = "Collection of general tasks automation scripts"
authors = [{ name = "Guido Dinello", email = "guido.dinello@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pylint>=3.3.6",
]
rust = ["maturin>=1.0.0"]

[tool.hatch.build.targets.sdist]
include = [
    "cheatsheet",
    "open",
    "organize",
    "utils",
]

[tool.hatch.build.targets.wheel]
include = [
    "cheatsheet",
    "open",
    "organize",
    "utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
