[project]
name = "scripts"
version = "0.1.0"
description = "Collection of general tasks automation scripts"
authors = [{ name = "Guido Dinello", email = "guido.dinello@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pylint>=3.3.6",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Path to the Rust extension module
module-name = "fuzzy_string_matcher"
# Include Python source files in the package
python-source = "."
# Specify the Rust manifest location
manifest-path = "rust_utils/fuzzy_string_matcher/Cargo.toml"
# Include Python packages (list of package names, not paths)
python-packages = ["cheatsheet", "open", "organize", "utils"]
